--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ compile
 config.guess
 config.h*
 !msvc/config.h
+!wince/config.h
 config.log
 config.status
 config.sub
@@ -26,6 +27,7 @@ config.sub
 doxygen.cfg
 listdevs
 xusb
+!wince/listdevs
 dpfp
 dpfp_threaded
 *.exe
@@ -38,3 +40,4 @@ Debug
 Release
 *.user
 *.suo
+STANDARDSDK_500 (*)
