--- a/wince/libusb/libusb.vcproj
+++ b/wince/libusb/libusb.vcproj
@@ -80,6 +80,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -153,6 +154,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -226,6 +228,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -299,6 +302,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -372,6 +376,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -445,6 +450,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -518,6 +524,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -591,6 +598,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="0"
@@ -666,6 +674,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="0"
@@ -741,6 +750,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="0"
@@ -816,6 +826,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="0"
@@ -891,6 +902,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="0"
@@ -966,6 +978,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="0"
@@ -1041,6 +1054,7 @@
 				Name="VCLinkerTool"
 				ModuleDefinitionFile="../../libusb/libusb-1.0.def"
 				GenerateDebugInformation="true"
+				SubSystem="9"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="0"
